--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 *.log
 *.log.*
 *.json
+# if some file should not be ignored then use: !file_name.extension Where .extension is ignored
+
 *#*
 *.class
 *.sql
