--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 requires =
     tox>=4
 
-env_list = py{308,309,310,311,312}
+env_list = py{38,39,310,312}
 
 [build-system]
 requires = ["setuptools"]
@@ -13,6 +13,6 @@ build-backend = "setuptools.build_meta"
 parallel_show_output = True
 
 description = runs unit tests
-deps = -r requirements/test-requirements.txt
+extras = test
 commands =
-    pytest
+    pytest --maxfail=1 --disable-warnings -q
